# Test-task

./: .gitignore  CMakeLists.txt  README.md  main.cpp
curves_lib/: CmakeLists.txt
curves_lib/include/: curves_3d.h
curves_lib/source/: circle.cpp  curves_3d.cpp  elipse.cpp  helix.cpp
include/: curves_3d.h
include_lib/: curves_3d.h
source/: Circle.cpp  Elipse.cpp  Helix.cpp  curves_3d.cpp
